--- a/tests/Graphite.Tests/Graphite.Tests.csproj
+++ b/tests/Graphite.Tests/Graphite.Tests.csproj
@@ -11,4 +11,8 @@
       <ProjectReference Include="..\..\src\Graphite\Graphite.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="SDL3-CS" Version="3.2.16.4" />
+    </ItemGroup>
+
 </Project>
