--- a/tests/Graphite.Tests/Graphite.Tests.csproj
+++ b/tests/Graphite.Tests/Graphite.Tests.csproj
@@ -14,6 +14,7 @@
 
     <ItemGroup>
       <PackageReference Include="SDL3-CS" Version="3.2.16.4" />
+      <PackageReference Include="SDL3-CS.Native" Version="3.2.18.2" />
     </ItemGroup>
 
     <ItemGroup>
