--- a/src/Graphite.VulkanMemoryAllocator/Graphite.VulkanMemoryAllocator.csproj
+++ b/src/Graphite.VulkanMemoryAllocator/Graphite.VulkanMemoryAllocator.csproj
@@ -9,4 +9,13 @@
       <PackageReference Include="Silk.NET.Vulkan" Version="2.22.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <None Update="VulkanMemoryAllocator.dll">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+      <None Update="libVulkanMemoryAllocator.so">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
+    </ItemGroup>
+
 </Project>
