--- a/src/Graphite.ShaderTools/Graphite.ShaderTools.csproj
+++ b/src/Graphite.ShaderTools/Graphite.ShaderTools.csproj
@@ -4,6 +4,16 @@
         <TargetFramework>net9.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
+        <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
     </PropertyGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Silk.NET.SPIRV.Cross" Version="2.22.0" />
+      <PackageReference Include="TerraFX.Interop.Windows" Version="10.0.26100.2" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <ProjectReference Include="..\Graphite\Graphite.csproj" />
+    </ItemGroup>
 
 </Project>
