move d3d11 to separate project

--- a/tests/Graphite.Tests/Graphite.Tests.csproj
+++ b/tests/Graphite.Tests/Graphite.Tests.csproj
@@ -9,7 +9,9 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <ProjectReference Include="..\..\src\Graphite.D3D11\Graphite.D3D11.csproj" />
       <ProjectReference Include="..\..\src\Graphite.ShaderTools\Graphite.ShaderTools.csproj" />
+      <ProjectReference Include="..\..\src\Graphite.Vulkan\Graphite.Vulkan.csproj" />
       <ProjectReference Include="..\..\src\Graphite\Graphite.csproj" />
     </ItemGroup>
 
