--- a/tests/Graphite.SimpleTest/Graphite.SimpleTest.csproj
+++ b/tests/Graphite.SimpleTest/Graphite.SimpleTest.csproj
@@ -27,6 +27,9 @@
       <None Update="DEBUG.png">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
+      <None Update="Bagel.png">
+        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      </None>
     </ItemGroup>
 
     <ItemGroup>
