--- a/src/Graphite.Vulkan/Graphite.Vulkan.csproj
+++ b/src/Graphite.Vulkan/Graphite.Vulkan.csproj
@@ -1,9 +1,13 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>net8.0</TargetFramework>
-        <ImplicitUsings>enable</ImplicitUsings>
-        <Nullable>enable</Nullable>
-    </PropertyGroup>
+    <ItemGroup>
+      <ProjectReference Include="..\Graphite\Graphite.csproj" />
+    </ItemGroup>
+
+    <ItemGroup>
+      <PackageReference Include="Silk.NET.Vulkan" Version="2.22.0" />
+      <PackageReference Include="Silk.NET.Vulkan.Extensions.EXT" Version="2.22.0" />
+      <PackageReference Include="Silk.NET.Vulkan.Extensions.KHR" Version="2.22.0" />
+    </ItemGroup>
 
 </Project>
